--- a/html/admin.html
+++ b/html/admin.html
@@ -3,10 +3,10 @@
 <TITLE>
 ESP: Admin
 </TITLE>
-<link rel="stylesheet" href="/css/esp.css" type="text/css">
-<script src="/js/utils.js"></script>
-<script src="/js/sorttable.js"></script>
-<script src="/js/admin.js"></script>
+<link rel="stylesheet" href="css/esp.css" type="text/css">
+<script src="js/utils.js"></script>
+<script src="js/sorttable.js"></script>
+<script src="js/admin.js"></script>
 </HEAD>
 <BODY>
 <div class="mainbody">
@@ -29,7 +29,7 @@ ESP: Admin
 </form>
 <table border=1 id="usersTable" class="listthings sortable">
 <thead>
-<tr><th id="userNameHeader">Username</th><th class="sorttable_nosort">Type</th><th class="sorttable_nosort">Disabled</th><th class="sorttable_nosort"></th></tr>
+<tr><th id="userNameHeader">Username</th><th class="sorttable_nosort">Type</th><th class="sorttable_nosort">Hidden</th><th class="sorttable_nosort"></th></tr>
 </thead>
 <tbody>
 </tbody>
