--- a/html/changePassword.html
+++ b/html/changePassword.html
@@ -3,10 +3,10 @@
 <TITLE>
 ESP: Change Password
 </TITLE>
-<link rel="stylesheet" href="/css/esp.css" type="text/css">
-<script src="/js/utils.js"></script>
-<script src="/js/sorttable.js"></script>
-<script src="/js/changePassword.js"></script>
+<link rel="stylesheet" href="css/esp.css" type="text/css">
+<script src="js/utils.js"></script>
+<script src="js/sorttable.js"></script>
+<script src="js/changePassword.js"></script>
 </HEAD>
 <BODY>
 <div class="mainbody">
