--- a/html/locations.html
+++ b/html/locations.html
@@ -3,10 +3,10 @@
 <TITLE>
 ESP: Locations
 </TITLE>
-<link rel="stylesheet" href="/css/esp.css" type="text/css">
-<script src="/js/utils.js"></script>
-<script src="/js/sorttable.js"></script>
-<script src="/js/location.js"></script>
+<link rel="stylesheet" href="css/esp.css" type="text/css">
+<script src="js/utils.js"></script>
+<script src="js/sorttable.js"></script>
+<script src="js/location.js"></script>
 </HEAD>
 <BODY>
 <div class="mainbody">
@@ -22,7 +22,7 @@ ESP: Locations
 </form>
 <table border=1 id="locationsTable" class="listthings sortable">
 <thead>
-<tr><th id="locationNameHeader">Location name</th><th class="sorttable_nosort">Obsolete?</th></tr>
+<tr><th id="locationNameHeader">Location name</th><th class="sorttable_nosort">Hidden</th></tr>
 </thead>
 <tbody>
 </tbody>
