hiddenlocations can be viewd with checkbox

--- a/html/locations.html
+++ b/html/locations.html
@@ -20,6 +20,7 @@ ESP: Locations
 <label>Location name:<input type="text" id="locationName" size="40"></label><br />
 </fieldset>
 </form>
+<label>Show hidden items<input type="checkbox" id="showHiddenCheckbox"></label>
 <table border=1 id="locationsTable" class="listthings sortable">
 <thead>
 <tr><th id="locationNameHeader">Location name</th><th class="sorttable_nosort">Hidden</th></tr>
