added initial bin management

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@ ESP: Easy Stock Program
 <input type="button" id="logoutButton" value="Logout" disabled="disabled">
 </p>
 <input type="button" id="locationsButton" disabled="disabled" value="Locations">
+<input type="button" id="binsButton" disabled="disabled" value="Bins">
 <input type="button" id="adminButton" disabled="disabled" value="Admin">
 <input type="button" id="changeMyPasswordButton" disabled="disabled" value="Change Password">
 
