callback via index page working for location

--- a/html/index.html
+++ b/html/index.html
@@ -30,5 +30,8 @@ ESP: Easy Stock Program
 <input type="button" id="adminButton" disabled="disabled" value="Admin">
 <input type="button" id="changeMyPasswordButton" disabled="disabled" value="Change Password">
 
+<input type="button" name='location-select' id="showRegistered" value="Show registered">
+
+
 </BODY>
 </HTML>
