--- a/html/location.html
+++ b/html/location.html
@@ -21,8 +21,8 @@ ESP: Locations
 <label>Location name:<input type="text" id="locationName" size="40"></label><br />
 </fieldset>
 </form>
-<label>Show hidden locations<input type="checkbox" id="locationsHideCheckbox" class="hideCheckbox"></label>
-<table border=1 id="locationsTable" class="listthings sortable">
+<label>Show hidden locations<input type="checkbox" id="locationHideCheckbox" class="hideCheckbox"></label>
+<table border=1 name="locationTable" id="locationTable" class="listthings sortable">
 <thead>
 <tr><th id="locationNameHeader">Location name</th><th class="sorttable_nosort">Hidden</th></tr>
 </thead>
