--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 ESP: Easy Stock Program
 </TITLE>
 <link rel="stylesheet" href="css/esp.css" type="text/css">
+<script src="js/debug.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/sorttable.js"></script>
 <script src="js/index.js"></script>
@@ -30,7 +31,7 @@ ESP: Easy Stock Program
 <input type="button" id="adminButton" disabled="disabled" value="Admin">
 <input type="button" id="changeMyPasswordButton" disabled="disabled" value="Change Password">
 
-<input type="button" name='location-select' id="showRegistered" value="Show registered">
+<input type="button" id="debugButton" value="Debug window">
 
 
 </BODY>
