--- a/html/admin.html
+++ b/html/admin.html
@@ -28,8 +28,8 @@ ESP: Admin
 <input type="button" id="addUserSubmit" value="Add user">
 </fieldset>
 </form>
-<label>Show hidden users<input type="checkbox" id="usersHideCheckbox" class="hideCheckbox"></label>
-<table border=1 id="usersTable" class="listthings sortable">
+<label>Show hidden users<input type="checkbox" id="userHideCheckbox" class="hideCheckbox"></label>
+<table border=1 name="userTable" id="userTable" class="listthings sortable">
 <thead>
 <tr><th id="userNameHeader">Username</th><th class="sorttable_nosort">Type</th><th class="sorttable_nosort">Hidden</th><th class="sorttable_nosort"></th></tr>
 </thead>
