listable is generalized

--- a/html/bin.html
+++ b/html/bin.html
@@ -20,7 +20,7 @@ ESP: Bins
 <legend class="add">New Bin</legend>
 <label>Bin name:<input type="text" id="binName" size="40"></label><br />
 <label>Bin size:<input type="text" id="binSlots" size="5"></label> <i>Enter the number of spaces, use 0 for no limit.</i><br />
-<label>Bin location:<select id="binLocation" class="listable"><option>Select one</option></select></label><br />
+<label>Bin location:<select id="binLocation" class="listof=location"><option>Select one</option></select></label><br />
 <input type="button" id="addBinSubmit" value="Add bin">
 </fieldset>
 </form>
