--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,7 @@ ESP: Easy Stock Program
 </p>
 <input type="button" id="locationsButton" disabled="disabled" value="Locations">
 <input type="button" id="binsButton" disabled="disabled" value="Bins">
+<input type="button" id="tagButton" disabled="disabled" value="Tags">
 <input type="button" id="adminButton" disabled="disabled" value="Admin">
 <input type="button" id="changeMyPasswordButton" disabled="disabled" value="Change Password">
 
