--- a/html/item.html
+++ b/html/item.html
@@ -8,6 +8,7 @@ ESP: Items
 <script src="js/sorttable.js"></script>
 <script src="js/listable.js"></script>
 <script src="js/hiddenRows.js"></script>
+<script src="js/mselect.js"></script>
 <script src="js/item.js"></script>
 </HEAD>
 <BODY>
