mselect lists working

--- a/html/item.html
+++ b/html/item.html
@@ -10,6 +10,7 @@ ESP: Items
 <script src="js/hiddenRows.js"></script>
 <script src="js/mselect.js"></script>
 <script src="js/item.js"></script>
+<script src="js/debug.js"></script>
 </HEAD>
 <BODY>
 <div class="mainbody">
