initial stab at purchase page

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@ ESP: Easy Stock Program
 <p id="loggedInMessage">Not logged in
 <input type="button" id="logoutButton" value="Logout" disabled="disabled">
 </p>
+<input type="button" id="purchaseButton" disabled="disabled" value="Purchases">
 <input type="button" id="locationsButton" disabled="disabled" value="Locations">
 <input type="button" id="binsButton" disabled="disabled" value="Bins">
 <input type="button" id="itemButton" disabled="disabled" value="Items">
