--- a/html/item.html
+++ b/html/item.html
@@ -25,7 +25,7 @@ ESP: Items
 <label>Type:<input type="text" id="itemType" size="40"></label><br />
 <label>Description:<input type="text" id="itemDesc" size="40"></label><br />
 <label>Size:<input type="text" id="itemSize" size="40"></label><br />
-<label>Tags:<select id="itemTags" class="listof=tag" multiple="multiple"><option>Select tags</option></select></label><br />
+<label>Tags:<input id="itemTags" type="text" class="listof=tag"></label><br />
 <input type="button" id="addItemSubmit" value="Add item">
 </fieldset>
 </form>
