add purchase form working

--- a/html/bin.html
+++ b/html/bin.html
@@ -9,6 +9,7 @@ ESP: Bins
 <script src="js/listable.js"></script>
 <script src="js/hiddenRows.js"></script>
 <script src="js/bin.js"></script>
+<script src="js/debug.js"></script>
 </HEAD>
 <BODY>
 <div class="mainbody">
