--- a/html/admin.html
+++ b/html/admin.html
@@ -4,8 +4,10 @@
 ESP: Admin
 </TITLE>
 <link rel="stylesheet" href="css/esp.css" type="text/css">
+<script src="js/debug.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/sorttable.js"></script>
+<script src="js/listable.js"></script>
 <script src="js/hiddenRows.js"></script>
 <script src="js/admin.js"></script>
 </HEAD>
@@ -28,6 +30,7 @@ ESP: Admin
 <input type="button" id="addUserSubmit" value="Add user">
 </fieldset>
 </form>
+<label>Automatically move purchases to bin <select id="binIncoming" class="listof=bin"></select></label><br />
 <label>Show hidden users<input type="checkbox" id="userHideCheckbox" class="hideCheckbox"></label>
 <table border=1 name="userTable" id="userTable" class="listthings sortable">
 <thead>
