start of refactoring

--- a/html/index.html
+++ b/html/index.html
@@ -23,12 +23,12 @@ ESP: Easy Stock Program
 <input type="button" id="loginButton" value="Login">
 </fieldset>
 </form>
-<p id="loggedInMessage">Not logged in
+<output id="loggedInMessage">Not logged in</output>
 <input type="button" id="logoutButton" value="Logout" disabled="disabled">
 </p>
 <input type="button" id="purchaseButton" disabled="disabled" value="Purchases">
-<input type="button" id="locationsButton" disabled="disabled" value="Locations">
-<input type="button" id="binsButton" disabled="disabled" value="Bins">
+<input type="button" id="locationButton" disabled="disabled" value="Locations">
+<input type="button" id="binButton" disabled="disabled" value="Bins">
 <input type="button" id="itemButton" disabled="disabled" value="Items">
 <input type="button" id="tagButton" disabled="disabled" value="Tags">
 <input type="button" id="adminButton" disabled="disabled" value="Admin">
