refactored, halfway through debugging changes

--- a/html/bin.html
+++ b/html/bin.html
@@ -7,6 +7,7 @@ ESP: Bins
 <script src="js/utils.js"></script>
 <script src="js/sorttable.js"></script>
 <script src="js/listable.js"></script>
+<script src="js/field.js"></script>
 <script src="js/hiddenRows.js"></script>
 <script src="js/bin.js"></script>
 <script src="js/debug.js"></script>
