--- a/html/item.html
+++ b/html/item.html
@@ -7,6 +7,7 @@ ESP: Items
 <script src="js/utils.js"></script>
 <script src="js/sorttable.js"></script>
 <script src="js/listable.js"></script>
+<script src="js/field.js"></script>
 <script src="js/hiddenRows.js"></script>
 <script src="js/mselect.js"></script>
 <script src="js/item.js"></script>
