--- a/html/location.html
+++ b/html/location.html
@@ -6,6 +6,7 @@ ESP: Locations
 <link rel="stylesheet" href="css/esp.css" type="text/css">
 <script src="js/utils.js"></script>
 <script src="js/sorttable.js"></script>
+<script src="js/field.js"></script>
 <script src="js/hiddenRows.js"></script>
 <script src="js/location.js"></script>
 </HEAD>
