--- a/html/admin.html
+++ b/html/admin.html
@@ -8,6 +8,7 @@ ESP: Admin
 <script src="js/utils.js"></script>
 <script src="js/sorttable.js"></script>
 <script src="js/listable.js"></script>
+<script src="js/field.js"></script>
 <script src="js/hiddenRows.js"></script>
 <script src="js/admin.js"></script>
 </HEAD>
