--- a/html/purchase.html
+++ b/html/purchase.html
@@ -7,8 +7,8 @@ ESP: Purchases
 <script src="js/utils.js"></script>
 <script src="js/sorttable.js"></script>
 <script src="js/listable.js"></script>
+<script src="js/field.js"></script>
 <script src="js/hiddenRows.js"></script>
-<script src="js/mselect.js"></script>
 <script src="js/purchase.js"></script>
 <script src="js/debug.js"></script>
 </HEAD>
