--- a/html/bin.html
+++ b/html/bin.html
@@ -29,7 +29,7 @@ ESP: Bins
 <label>Show hidden bins<input type="checkbox" id="binHideCheckbox" class="hideCheckbox"></label>
 <table border=1 name="binTable" id="binTable" class="listthings sortable">
 <thead>
-<tr><th id="binNameHeader">Bin name</th><th id="binSlotsHeader">Bin size</th><th class="sorttable_nosort">Location</th><th class="sorttable_nosort">Hidden</th></tr>
+<tr><th id="binNameHeader">Bin name</th><th id="binSlotsHeader">Bin size</th><th>Location</th><th class="sorttable_nosort">Hidden</th></tr>
 </thead>
 <tbody>
 </tbody>
