--- a/html/tag.html
+++ b/html/tag.html
@@ -5,6 +5,7 @@ ESP: Tags
 </TITLE>
 <link rel="stylesheet" href="css/esp.css" type="text/css">
 <script src="js/utils.js"></script>
+<script src="js/field.js"></script>
 <script src="js/sorttable.js"></script>
 <script src="js/hiddenRows.js"></script>
 <script src="js/tag.js"></script>
